[gd_scene load_steps=6 format=3 uid="uid://csvbculx5hbu4"]

[ext_resource type="Texture2D" uid="uid://cxwnu6ygj3gtw" path="res://assets/sprites/beach_ball.png" id="1_4014t"]
[ext_resource type="Script" path="res://scripts/beach_ball.gd" id="1_drua0"]
[ext_resource type="Texture2D" uid="uid://no4qfyiqam76" path="res://assets/sprites/shadow_2.png" id="3_l0foi"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_v1kv0"]
friction = 0.45
bounce = 0.6

[sub_resource type="CircleShape2D" id="CircleShape2D_x0jbk"]
radius = 12.0416

[node name="BeachBall" type="RigidBody2D"]
collision_layer = 6
collision_mask = 6
mass = 0.3
physics_material_override = SubResource("PhysicsMaterial_v1kv0")
gravity_scale = 0.0
angular_damp = 0.1
script = ExtResource("1_drua0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_x0jbk")

[node name="BallSprite" type="Sprite2D" parent="."]
z_index = 2
texture = ExtResource("1_4014t")

[node name="ShadowSprite" type="Sprite2D" parent="."]
top_level = true
z_index = 1
z_as_relative = false
position = Vector2(0, 2)
texture = ExtResource("3_l0foi")
